--- a/index.html
+++ b/index.html
@@ -57,9 +57,7 @@
                 </div>
             </div>
             <div class="hero-image">
-                <div class="image-placeholder">
-                    <i class="fas fa-user"></i>
-                </div>
+                <img src="arif-hossain.jpg" alt="Arif Hossain" class="profile-image">
             </div>
         </div>
     </section>
