--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 </div>
             </div>
             <div class="hero-image">
-                <img src="arif-hossain.jpg" alt="Arif Hossain" class="profile-image">
+                <img src="./arif-hossain.jpg" alt="Arif Hossain" class="profile-image">
             </div>
         </div>
     </section>
