--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
                     <a href="#contact" class="btn btn-secondary">Get In Touch</a>
                 </div>
                 <div class="social-links">
-                    <a href="https://github.com/arifhossain" class="social-link"><i class="fab fa-github"></i></a>
-                    <a href="https://www.linkedin.com/in/arif-hossain-92b438206/" class="social-link"><i class="fab fa-linkedin"></i></a>
-                    <a href="mailto:arif.s.hossain@outlook.com" class="social-link"><i class="fas fa-envelope"></i></a>
-                    <a href="tel:+46763209865" class="social-link"><i class="fas fa-phone"></i></a>
+                    <a href="https://github.com/arifhossain" class="social-link" target="_blank"><i class="fab fa-github"></i></a>
+                    <a href="https://www.linkedin.com/in/arif-hossain-92b438206/" class="social-link" target="_blank"><i class="fab fa-linkedin"></i></a>
+                    <a href="mailto:arif.s.hossain@outlook.com" class="social-link" target="_blank"><i class="fas fa-envelope"></i></a>
+                    <a href="tel:+46763209865" class="social-link" target="_blank"><i class="fas fa-phone"></i></a>
                 </div>
             </div>
             <div class="hero-image">
@@ -120,8 +120,8 @@
                             <span class="tech-tag">PostgreSQL</span>
                         </div>
                         <div class="project-links">
-                            <a href="#" class="project-link"><i class="fab fa-github"></i> Code</a>
-                            <a href="#" class="project-link"><i class="fas fa-external-link-alt"></i> Live</a>
+                            <a href="#" class="project-link" target="_blank"><i class="fab fa-github"></i> Code</a>
+                            <a href="#" class="project-link" target="_blank"><i class="fas fa-external-link-alt"></i> Live</a>
                         </div>
                     </div>
                 </div>
@@ -140,8 +140,8 @@
                             <span class="tech-tag">Keycloak</span>
                         </div>
                         <div class="project-links">
-                            <a href="#" class="project-link"><i class="fab fa-github"></i> Code</a>
-                            <a href="#" class="project-link"><i class="fas fa-external-link-alt"></i> Live</a>
+                            <a href="#" class="project-link" target="_blank"><i class="fab fa-github"></i> Code</a>
+                            <a href="#" class="project-link" target="_blank"><i class="fas fa-external-link-alt"></i> Live</a>
                         </div>
                     </div>
                 </div>
@@ -160,8 +160,8 @@
                             <span class="tech-tag">PostgreSQL</span>
                         </div>
                         <div class="project-links">
-                            <a href="#" class="project-link"><i class="fab fa-github"></i> Code</a>
-                            <a href="#" class="project-link"><i class="fas fa-external-link-alt"></i> Live</a>
+                            <a href="#" class="project-link" target="_blank"><i class="fab fa-github"></i> Code</a>
+                            <a href="#" class="project-link" target="_blank"><i class="fas fa-external-link-alt"></i> Live</a>
                         </div>
                     </div>
                 </div>
@@ -317,10 +317,10 @@
             <div class="footer-content">
                 <p>&copy; 2024 Arif Hossain. All rights reserved.</p>
                 <div class="footer-social">
-                    <a href="https://github.com/arifhossain" class="social-link"><i class="fab fa-github"></i></a>
-                    <a href="https://www.linkedin.com/in/arif-hossain-92b438206/" class="social-link"><i class="fab fa-linkedin"></i></a>
-                    <a href="mailto:arif.s.hossain@outlook.com" class="social-link"><i class="fas fa-envelope"></i></a>
-                    <a href="tel:+46763209865" class="social-link"><i class="fas fa-phone"></i></a>
+                    <a href="https://github.com/arifhossain" class="social-link" target="_blank"><i class="fab fa-github"></i></a>
+                    <a href="https://www.linkedin.com/in/arif-hossain-92b438206/" class="social-link" target="_blank"><i class="fab fa-linkedin"></i></a>
+                    <a href="mailto:arif.s.hossain@outlook.com" class="social-link" target="_blank"><i class="fas fa-envelope"></i></a>
+                    <a href="tel:+46763209865" class="social-link" target="_blank"><i class="fas fa-phone"></i></a>
                 </div>
             </div>
         </div>
