updated about me section

--- a/index.html
+++ b/index.html
@@ -69,31 +69,37 @@
             <div class="about-content">
                 <div class="about-text">
                     <p>
-                        I am a passionate Full-Stack Developer with expertise in Java and Frontend Development. 
-                        I enjoy building modern web applications using JavaScript, React, and Vue.js. 
-                        With a strong background in backend technologies like Spring Boot and Node.js, 
-                        I create efficient and scalable solutions.
+                        I am a Full-Stack Developer specializing in enterprise-level web applications with expertise in 
+                        <strong>Java 17, Spring Boot, React, and PostgreSQL</strong>. Currently developing a comprehensive 
+                        <strong>Swedish Media Annotation Platform</strong> at SVT, featuring microservices architecture, 
+                        complex database relationships, and modern React/TypeScript frontend with analytics dashboards.
                     </p>
                     <p>
-                        I thrive in agile environments, collaborating with teams to deliver high-quality software. 
-                        Currently expanding my skills in HTML, CSS, JavaScript, React and Vue.js, with a focus on 
-                        UI/UX, responsive design and modern web technologies.
+                        My experience spans <strong>full-stack development</strong> from database design and RESTful API 
+                        architecture to modern frontend development with React, TypeScript, and data visualization. 
+                        I excel at building <strong>scalable solutions</strong> using Docker containerization, 
+                        implementing complex business logic, and creating intuitive user interfaces for data-intensive applications.
+                    </p>
+                    <p>
+                        I thrive in <strong>agile environments</strong>, collaborating with cross-functional teams to deliver 
+                        high-quality software solutions. My recent work demonstrates expertise in <strong>media content management</strong>, 
+                        <strong>speech recognition workflows</strong>, and <strong>analytics platforms</strong> with real-time data processing.
                     </p>
                     <div class="skills">
-                        <h3>Skills & Technologies</h3>
+                        <h3>Core Technologies & Expertise</h3>
                         <div class="skills-grid">
-                            <span class="skill-tag">Java</span>
-                            <span class="skill-tag">Spring Boot</span>
-                            <span class="skill-tag">React</span>
-                            <span class="skill-tag">Vue.js</span>
-                            <span class="skill-tag">JavaScript</span>
+                            <span class="skill-tag">Java 17</span>
+                            <span class="skill-tag">Spring Boot 3.5</span>
+                            <span class="skill-tag">React 19</span>
                             <span class="skill-tag">TypeScript</span>
                             <span class="skill-tag">PostgreSQL</span>
-                            <span class="skill-tag">Hibernate</span>
+                            <span class="skill-tag">JPA/Hibernate</span>
                             <span class="skill-tag">Docker</span>
-                            <span class="skill-tag">Git</span>
-                            <span class="skill-tag">Maven</span>
+                            <span class="skill-tag">RESTful APIs</span>
+                            <span class="skill-tag">Microservices</span>
+                            <span class="skill-tag">Data Analytics</span>
                             <span class="skill-tag">Tailwind CSS</span>
+                            <span class="skill-tag">Git</span>
                         </div>
                     </div>
                 </div>
