--- a/index.html
+++ b/index.html
@@ -118,12 +118,16 @@
                     </div>
                     <div class="project-content">
                         <h3>Swedish Media Annotation Platform</h3>
-                        <p>Full-stack web application for annotating Swedish TV/radio content with React/TypeScript frontend, Spring Boot REST API, and PostgreSQL database. Features episode management, speaker identification, and automated annotation tools.</p>
+                        <p>Enterprise-level full-stack application with microservices architecture for annotating Swedish TV/radio content. Features complex database relationships, RESTful APIs, analytics dashboards with data visualization, Docker containerization, and automated speech recognition workflows. Built with React 19/TypeScript frontend, Spring Boot 3.5 REST API, and PostgreSQL with JPA/Hibernate ORM.</p>
                         <div class="project-tech">
-                            <span class="tech-tag">React</span>
+                            <span class="tech-tag">React 19</span>
                             <span class="tech-tag">TypeScript</span>
-                            <span class="tech-tag">Spring Boot</span>
+                            <span class="tech-tag">Spring Boot 3.5</span>
                             <span class="tech-tag">PostgreSQL</span>
+                            <span class="tech-tag">JPA/Hibernate</span>
+                            <span class="tech-tag">Docker</span>
+                            <span class="tech-tag">Microservices</span>
+                            <span class="tech-tag">Data Analytics</span>
                         </div>
                         <div class="project-links">
                             <a href="#" class="project-link" target="_blank"><i class="fab fa-github"></i> Code</a>
@@ -234,7 +238,7 @@
                         <h3>Full-Stack Developer Intern</h3>
                         <h4>SVT (Sveriges Television)</h4>
                         <span class="timeline-date">Aug 2024 - May 2025</span>
-                        <p>Currently developing a Swedish Media Annotation Platform for annotating TV/radio content. Working with React/TypeScript frontend, Spring Boot REST API, and PostgreSQL database. Features include episode management, speaker identification, and automated annotation tools.</p>
+                        <p>Developing enterprise-level Swedish Media Annotation Platform with microservices architecture. Implementing complex database relationships with PostgreSQL and JPA/Hibernate, building RESTful APIs with Spring Boot 3.5, and creating React 19/TypeScript frontend with analytics dashboards. Features include automated speech recognition workflows, speaker demographic analysis, Word Error Rate calculations, and Docker containerization for scalable deployment.</p>
                     </div>
                 </div>
 
