added more skills

--- a/index.html
+++ b/index.html
@@ -82,6 +82,15 @@
                         I thrive in <strong>agile environments</strong>, collaborating with cross-functional teams to deliver 
                         high-quality software solutions. My recent work demonstrates expertise in <strong>media content management</strong>, 
                         <strong>speech recognition workflows</strong>, and <strong>analytics platforms</strong> with real-time data processing.
+                        I'm experienced with <strong>Kubernetes/k9s</strong> for container orchestration and <strong>Python</strong> for 
+                        automation and data processing, along with <strong>Figma</strong> for UI/UX design collaboration.
+                    </p>
+                    <p>
+                        I excel in <strong>agile development methodologies</strong> and have experience as a <strong>Scrum Master</strong>, 
+                        facilitating sprint planning, retrospectives, and team collaboration. I'm proficient with modern 
+                        <strong>communication and project management tools</strong> including Teams, Slack, Trello, GitHub, GitLab, 
+                        and Mural for remote collaboration and visual planning. I have hands-on experience with 
+                        <strong>CI/CD pipelines</strong> for automated testing and deployment workflows.
                     </p>
                     <div class="skills">
                         <h3>Core Technologies & Expertise</h3>
@@ -90,14 +99,27 @@
                             <span class="skill-tag">Spring Boot 3.5</span>
                             <span class="skill-tag">React 19</span>
                             <span class="skill-tag">TypeScript</span>
+                            <span class="skill-tag">Python</span>
                             <span class="skill-tag">PostgreSQL</span>
                             <span class="skill-tag">JPA/Hibernate</span>
                             <span class="skill-tag">Docker</span>
+                            <span class="skill-tag">Kubernetes</span>
+                            <span class="skill-tag">k9s</span>
                             <span class="skill-tag">RESTful APIs</span>
                             <span class="skill-tag">Microservices</span>
                             <span class="skill-tag">Data Analytics</span>
                             <span class="skill-tag">Tailwind CSS</span>
+                            <span class="skill-tag">Figma</span>
                             <span class="skill-tag">Git</span>
+                            <span class="skill-tag">GitHub</span>
+                            <span class="skill-tag">GitLab</span>
+                            <span class="skill-tag">CI/CD</span>
+                            <span class="skill-tag">Trello</span>
+                            <span class="skill-tag">Mural</span>
+                            <span class="skill-tag">Scrum Master</span>
+                            <span class="skill-tag">Agile Development</span>
+                            <span class="skill-tag">Teams</span>
+                            <span class="skill-tag">Slack</span>
                         </div>
                     </div>
                 </div>
