updated infor about

--- a/index.html
+++ b/index.html
@@ -61,72 +61,76 @@
     </section>
 
     <!-- About Section -->
-    <section id="about" class="about">
-        <div class="container">
-            <h2 class="section-title">About Me</h2>
-            <div class="about-content">
-                <div class="about-text">
-                    <p>
-                        I am a Full-Stack Developer specializing in enterprise-level web applications with expertise in 
-                        <strong>Java 17, Spring Boot, React, and PostgreSQL</strong>. Currently developing a comprehensive 
-                        <strong>Swedish Media Annotation Platform</strong> at SVT, featuring microservices architecture, 
-                        complex database relationships, and modern React/TypeScript frontend with analytics dashboards.
-                    </p>
-                    <p>
-                        My experience spans <strong>full-stack development</strong> from database design and RESTful API 
-                        architecture to modern frontend development with React, TypeScript, and data visualization. 
-                        I excel at building <strong>scalable solutions</strong> using Docker containerization, 
-                        implementing complex business logic, and creating intuitive user interfaces for data-intensive applications.
-                    </p>
-                    <p>
-                        I thrive in <strong>agile environments</strong>, collaborating with cross-functional teams to deliver 
-                        high-quality software solutions. My recent work demonstrates expertise in <strong>media content management</strong>, 
-                        <strong>speech recognition workflows</strong>, and <strong>analytics platforms</strong> with real-time data processing.
-                        I'm experienced with <strong>Kubernetes/k9s</strong> for container orchestration and <strong>Python</strong> for 
-                        automation and data processing, along with <strong>Figma</strong> for UI/UX design collaboration.
-                    </p>
-                    <p>
-                        I excel in <strong>agile development methodologies</strong> and have experience as a <strong>Scrum Master</strong>, 
-                        facilitating sprint planning, retrospectives, and team collaboration. I'm proficient with modern 
-                        <strong>communication and project management tools</strong> including Teams, Slack, Trello, GitHub, GitLab, 
-                        and Mural for remote collaboration and visual planning. I have hands-on experience with 
-                        <strong>CI/CD pipelines</strong> for automated testing and deployment workflows.
-                    </p>
-                    <div class="skills">
-                        <h3>Core Technologies & Expertise</h3>
-                        <div class="skills-grid">
-                            <span class="skill-tag">Java 17</span>
-                            <span class="skill-tag">Spring Boot 3.5</span>
-                            <span class="skill-tag">React 19</span>
-                            <span class="skill-tag">TypeScript</span>
-                            <span class="skill-tag">Python</span>
-                            <span class="skill-tag">PostgreSQL</span>
-                            <span class="skill-tag">JPA/Hibernate</span>
-                            <span class="skill-tag">Docker</span>
-                            <span class="skill-tag">Kubernetes</span>
-                            <span class="skill-tag">k9s</span>
-                            <span class="skill-tag">RESTful APIs</span>
-                            <span class="skill-tag">Microservices</span>
-                            <span class="skill-tag">Data Analytics</span>
-                            <span class="skill-tag">Tailwind CSS</span>
-                            <span class="skill-tag">Figma</span>
-                            <span class="skill-tag">Git</span>
-                            <span class="skill-tag">GitHub</span>
-                            <span class="skill-tag">GitLab</span>
-                            <span class="skill-tag">CI/CD</span>
-                            <span class="skill-tag">Trello</span>
-                            <span class="skill-tag">Mural</span>
-                            <span class="skill-tag">Scrum Master</span>
-                            <span class="skill-tag">Agile Development</span>
-                            <span class="skill-tag">Teams</span>
-                            <span class="skill-tag">Slack</span>
-                        </div>
-                    </div>
-                </div>
+<section id="about" class="about">
+    <div class="container">
+      <h2 class="section-title">About Me</h2>
+      <div class="about-content">
+        <div class="about-text">
+          <p>
+            I am a <strong>Full-Stack Developer</strong> specializing in enterprise-level web applications, with expertise in 
+            <strong>Java 17, Spring Boot, React, and PostgreSQL</strong>. Currently, I’m developing a comprehensive 
+            <strong>Swedish Media Annotation Platform</strong> at SVT, featuring a microservices architecture, 
+            complex database relationships, and a modern React/TypeScript frontend with advanced analytics dashboards.
+          </p>
+  
+          <p>
+            My experience spans the entire <strong>full-stack development lifecycle</strong> — from database design and RESTful API 
+            architecture to modern frontend development with React, TypeScript, and data visualization. 
+            I focus on building <strong>scalable, maintainable solutions</strong> using Docker containerization, 
+            implementing complex business logic, and designing intuitive user interfaces for data-intensive applications.
+          </p>
+  
+          <p>
+            I thrive in <strong>agile environments</strong>, collaborating with cross-functional teams to deliver 
+            high-quality software. My recent work demonstrates strong expertise in <strong>media content management</strong>, 
+            <strong>speech recognition workflows</strong>, and <strong>analytics platforms</strong> with real-time data processing.
+            I’m also experienced with <strong>Kubernetes</strong> and <strong>k9s</strong> for container orchestration, as well as 
+            <strong>Python</strong> for automation and data processing. For UI/UX collaboration, I frequently use <strong>Figma</strong>.
+          </p>
+  
+          <p>
+            As a certified <strong>Scrum Master</strong>, I have extensive experience facilitating sprint planning, retrospectives, 
+            and promoting effective team collaboration. I’m proficient with modern 
+            <strong>communication and project management tools</strong> such as Teams, Slack, Trello, GitHub, GitLab, 
+            and Mural for remote collaboration and visual planning. I also have hands-on experience implementing 
+            <strong>CI/CD pipelines</strong> for automated testing and deployment.
+          </p>
+  
+          <div class="skills">
+            <h3>Core Technologies & Expertise</h3>
+            <div class="skills-grid">
+              <span class="skill-tag">Java 17</span>
+              <span class="skill-tag">Spring Boot 3.5</span>
+              <span class="skill-tag">React 19</span>
+              <span class="skill-tag">TypeScript</span>
+              <span class="skill-tag">Python</span>
+              <span class="skill-tag">PostgreSQL</span>
+              <span class="skill-tag">JPA/Hibernate</span>
+              <span class="skill-tag">Docker</span>
+              <span class="skill-tag">Kubernetes</span>
+              <span class="skill-tag">k9s</span>
+              <span class="skill-tag">RESTful APIs</span>
+              <span class="skill-tag">Microservices</span>
+              <span class="skill-tag">Data Analytics</span>
+              <span class="skill-tag">Tailwind CSS</span>
+              <span class="skill-tag">Figma</span>
+              <span class="skill-tag">Git</span>
+              <span class="skill-tag">GitHub</span>
+              <span class="skill-tag">GitLab</span>
+              <span class="skill-tag">CI/CD</span>
+              <span class="skill-tag">Trello</span>
+              <span class="skill-tag">Mural</span>
+              <span class="skill-tag">Scrum Master</span>
+              <span class="skill-tag">Agile Development</span>
+              <span class="skill-tag">Teams</span>
+              <span class="skill-tag">Slack</span>
             </div>
+          </div>
         </div>
-    </section>
-
+      </div>
+    </div>
+  </section>
+  
     <!-- Projects Section -->
     <section id="projects" class="projects">
         <div class="container">
