--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
             <div class="nav-menu" id="nav-menu">
                 <a href="#home" class="nav-link">Home</a>
                 <a href="#about" class="nav-link">About</a>
+                <a href="#languages" class="nav-link">Languages</a>
+                <a href="#fun-facts" class="nav-link">Fun Facts</a>
                 <a href="#projects" class="nav-link">Projects</a>
                 <a href="#education" class="nav-link">Education</a>
                 <a href="#experience" class="nav-link">Experience</a>
@@ -68,7 +70,7 @@
         <div class="about-text">
           <p>
             I am a <strong>Full-Stack Developer</strong> specializing in enterprise-level web applications, with expertise in 
-            <strong>Java 17, Spring Boot, React, and PostgreSQL</strong>. Currently, I’m developing a comprehensive 
+            <strong>Java 17, Spring Boot, React, and PostgreSQL</strong>. Currently, I'm developing a comprehensive 
             <strong>Swedish Media Annotation Platform</strong> at SVT, featuring a microservices architecture, 
             complex database relationships, and a modern React/TypeScript frontend with advanced analytics dashboards.
           </p>
@@ -84,41 +86,68 @@
             I thrive in <strong>agile environments</strong>, collaborating with cross-functional teams to deliver 
             high-quality software. My recent work demonstrates strong expertise in <strong>media content management</strong>, 
             <strong>speech recognition workflows</strong>, and <strong>analytics platforms</strong> with real-time data processing.
-            I’m also experienced with <strong>Kubernetes</strong> and <strong>k9s</strong> for container orchestration, as well as 
+            I'm also experienced with <strong>Kubernetes</strong> and <strong>k9s</strong> for container orchestration, as well as 
             <strong>Python</strong> for automation and data processing. For UI/UX collaboration, I frequently use <strong>Figma</strong>.
           </p>
   
           <p>
             As a certified <strong>Scrum Master</strong>, I have extensive experience facilitating sprint planning, retrospectives, 
-            and promoting effective team collaboration. I’m proficient with modern 
+            and promoting effective team collaboration. I'm proficient with modern 
             <strong>communication and project management tools</strong> such as Teams, Slack, Trello, GitHub, GitLab, 
             and Mural for remote collaboration and visual planning. I also have hands-on experience implementing 
             <strong>CI/CD pipelines</strong> for automated testing and deployment.
+          </p>
+
+          <p>
+            My strength lies in my ability to <strong>prioritize tasks and adapt to change</strong>. I'm known for being a 
+            <strong>team player and well-structured person</strong>. While I can get stressed when facing tight deadlines, 
+            I continuously work on improving by tackling challenges one at a time. This approach has helped me deliver 
+            successful projects and maintain high-quality codebases.
           </p>
   
           <div class="skills">
             <h3>Core Technologies & Expertise</h3>
             <div class="skills-grid">
               <span class="skill-tag">Java 17</span>
+              <span class="skill-tag">Java EE</span>
               <span class="skill-tag">Spring Boot 3.5</span>
+              <span class="skill-tag">Spring Security</span>
               <span class="skill-tag">React 19</span>
+              <span class="skill-tag">Vue.js</span>
+              <span class="skill-tag">ReactJS</span>
               <span class="skill-tag">TypeScript</span>
+              <span class="skill-tag">JavaScript</span>
+              <span class="skill-tag">Node.js</span>
+              <span class="skill-tag">HTML</span>
+              <span class="skill-tag">CSS</span>
               <span class="skill-tag">Python</span>
+              <span class="skill-tag">MySQL</span>
               <span class="skill-tag">PostgreSQL</span>
               <span class="skill-tag">JPA/Hibernate</span>
+              <span class="skill-tag">Maven</span>
+              <span class="skill-tag">Gradle</span>
+              <span class="skill-tag">Jenkins</span>
               <span class="skill-tag">Docker</span>
               <span class="skill-tag">Kubernetes</span>
               <span class="skill-tag">k9s</span>
+              <span class="skill-tag">CI/CD</span>
+              <span class="skill-tag">AWS</span>
+              <span class="skill-tag">Jira</span>
+              <span class="skill-tag">Trello</span>
+              <span class="skill-tag">IntelliJ</span>
+              <span class="skill-tag">NetBeans</span>
+              <span class="skill-tag">Eclipse</span>
+              <span class="skill-tag">Visual Studio Code</span>
+              <span class="skill-tag">Testing & Debugging</span>
+              <span class="skill-tag">Git</span>
+              <span class="skill-tag">GitHub</span>
+              <span class="skill-tag">GitLab</span>
+              <span class="skill-tag">Bitbucket</span>
               <span class="skill-tag">RESTful APIs</span>
               <span class="skill-tag">Microservices</span>
               <span class="skill-tag">Data Analytics</span>
               <span class="skill-tag">Tailwind CSS</span>
               <span class="skill-tag">Figma</span>
-              <span class="skill-tag">Git</span>
-              <span class="skill-tag">GitHub</span>
-              <span class="skill-tag">GitLab</span>
-              <span class="skill-tag">CI/CD</span>
-              <span class="skill-tag">Trello</span>
               <span class="skill-tag">Mural</span>
               <span class="skill-tag">Scrum Master</span>
               <span class="skill-tag">Agile Development</span>
@@ -130,6 +159,60 @@
       </div>
     </div>
   </section>
+
+    <!-- Languages Section -->
+    <section id="languages" class="languages">
+        <div class="container">
+            <h2 class="section-title">Languages</h2>
+            <div class="languages-content">
+                <div class="language-item">
+                    <div class="language-info">
+                        <h3>English</h3>
+                        <span class="proficiency">Working Proficiency</span>
+                    </div>
+                </div>
+                <div class="language-item">
+                    <div class="language-info">
+                        <h3>Swedish</h3>
+                        <span class="proficiency">Working Proficiency</span>
+                    </div>
+                </div>
+                <div class="language-item">
+                    <div class="language-info">
+                        <h3>Bangla</h3>
+                        <span class="proficiency">Native</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Fun Facts Section -->
+    <section id="fun-facts" class="fun-facts">
+        <div class="container">
+            <h2 class="section-title">Fun Facts</h2>
+            <div class="fun-facts-content">
+                <div class="fun-fact-card">
+                    <div class="fun-fact-icon">
+                        <i class="fas fa-fish"></i>
+                    </div>
+                    <div class="fun-fact-content">
+                        <h3>Fishing Enthusiast</h3>
+                        <p>I find fishing to be the perfect way to unwind and reconnect with nature. It's about appreciating the quieter moments and finding balance - a peaceful escape from the daily grind that teaches me the value of patience and tranquility.</p>
+                    </div>
+                </div>
+                <div class="fun-fact-card">
+                    <div class="fun-fact-icon">
+                        <i class="fas fa-table-tennis-paddle-ball"></i>
+                    </div>
+                    <div class="fun-fact-content">
+                        <h3>Sports Lover</h3>
+                        <p>I'm a big fan of sports, whether playing or watching. Badminton and ping pong are my go-to games for fun and fitness. Instead of hitting the gym, I prefer hitting the badminton court - I find this way more enjoyable to stay fit.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
   
     <!-- Projects Section -->
     <section id="projects" class="projects">
@@ -302,6 +385,110 @@
                         <p>Developed a mobile and web application for a recycling company. Built both backend and frontend using Java, Spring Boot, and ReactJS. Adapted to frequent project changes and maintained clean codebase for smooth collaboration in a 7-person team.</p>
                     </div>
                 </div>
+
+                <div class="project-card">
+                    <div class="project-image">
+                        <i class="fas fa-blog"></i>
+                    </div>
+                    <div class="project-content">
+                        <h3>Project 'My Blog' (Hobby Project)</h3>
+                        <h4>Full-Stack Developer</h4>
+                        <span class="timeline-date">2024 - Now</span>
+                        <p>As a solo developer, I built 'Project Blog,' a comprehensive blogging platform utilizing Java, Spring Boot, and ReactJS. The primary focus was developing a robust role-based authentication system, leveraging Spring Security and JWT token authentication. This project deepened my understanding of the entire development lifecycle, from initial concept to deployment.</p>
+                        <div class="project-tech">
+                            <span class="tech-tag">Java 17</span>
+                            <span class="tech-tag">Spring Boot</span>
+                            <span class="tech-tag">Spring Security</span>
+                            <span class="tech-tag">ReactJS</span>
+                            <span class="tech-tag">JWT Authentication</span>
+                            <span class="tech-tag">Docker</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="project-card">
+                    <div class="project-image">
+                        <i class="fas fa-id-card"></i>
+                    </div>
+                    <div class="project-content">
+                        <h3>Project 'EntryId' (Backend Developer & Project Leader)</h3>
+                        <h4>Hexa Studio</h4>
+                        <span class="timeline-date">2022</span>
+                        <p>As a backend developer and project leader, I leveraged my extensive restaurant management experience to develop an application tailored to optimize restaurant branch operations. The project involved creating a secure login system, efficient scheduling feature, and budgeting module over six weeks. My firsthand knowledge of restaurant challenges enabled me to ensure the application met practical needs.</p>
+                        <div class="project-tech">
+                            <span class="tech-tag">Java 17</span>
+                            <span class="tech-tag">Spring Boot</span>
+                            <span class="tech-tag">Spring Security</span>
+                            <span class="tech-tag">JWT Auth</span>
+                            <span class="tech-tag">Docker</span>
+                            <span class="tech-tag">CI/CD</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="project-card">
+                    <div class="project-image">
+                        <i class="fas fa-recycle"></i>
+                    </div>
+                    <div class="project-content">
+                        <h3>Project 'KitsConstructor' (Full-Stack Developer)</h3>
+                        <h4>Hexa Studio</h4>
+                        <span class="timeline-date">2022</span>
+                        <p>Led the digital transformation of a recycling company by developing an admin page and user-friendly mobile application, significantly improving operational efficiency and user engagement. A key challenge was adapting to frequent changes, including the removal and addition of features as per client requests. This project enhanced my adaptability and underscored the importance of maintaining a clean codebase.</p>
+                        <div class="project-tech">
+                            <span class="tech-tag">Java 11</span>
+                            <span class="tech-tag">Spring Boot</span>
+                            <span class="tech-tag">Spring Security</span>
+                            <span class="tech-tag">ReactJS</span>
+                            <span class="tech-tag">React Native</span>
+                            <span class="tech-tag">Docker</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="project-card">
+                    <div class="project-image">
+                        <i class="fas fa-tools"></i>
+                    </div>
+                    <div class="project-content">
+                        <h3>Project 'Craftson' (Full-Stack Developer)</h3>
+                        <h4>Hexa Studio</h4>
+                        <span class="timeline-date">2022</span>
+                        <p>During my six-month tenure at Hexa Studio, I was integral to the development of 'Project Craftson,' a management system designed for Project Managers and Developers, focusing on time and material reporting. My responsibilities included designing and documenting requirements, developing customer experience maps, and implementing role-based security.</p>
+                        <div class="project-tech">
+                            <span class="tech-tag">Java 11</span>
+                            <span class="tech-tag">Spring Boot</span>
+                            <span class="tech-tag">Spring Security</span>
+                            <span class="tech-tag">JWT Auth</span>
+                            <span class="tech-tag">Docker</span>
+                            <span class="tech-tag">CI/CD</span>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- <div class="project-card">
+                    <div class="project-image">
+                        <i class="fas fa-utensils"></i>
+                    </div>
+                    <div class="project-content">
+                        <h3>Restaurant Manager</h3>
+                        <h4>Vigårda</h4>
+                        <span class="timeline-date">June 2017 - November 2020</span>
+                        <p>Managed overall restaurant operations at Vigårda, encompassing staff management, budgeting, and overseeing daily sales. Initially faced challenges in balancing owner expectations, team dynamics, and customer satisfaction. Successfully navigated these complexities to improve sales, enhance team efficiency, and boost customer satisfaction during my tenure.</p>
+                    </div>
+                </div>
+
+                <div class="project-card">
+                    <div class="project-image">
+                        <i class="fas fa-hamburger"></i>
+                    </div>
+                    <div class="project-content">
+                        <h3>Shift Manager</h3>
+                        <h4>McDonald's Tornado AB</h4>
+                        <span class="timeline-date">August 2010 - December 2016</span>
+                        <p>At McDonald's Tornado AB, my role extended beyond overseeing raw materials ordering and scheduling. Known for my problem-solving skills, I effectively handled machinery maintenance and guest claims, earning a reputation as a reliable and efficient manager. My consistent performance under high-pressure conditions led to several 'Employee of the Month' awards.</p>
+                    </div>
+                </div> -->
             </div>
             <button class="show-more-btn" id="show-more-experience">Show More Details</button>
         </div>
